# custom_neural_network

./: README.md
c/: CMakeLists.txt  activation_functions.c  activation_functions.h  perceptron.h
c/include/: activation_functions.h  perceptron.h
c/src/: activation_functions.c  main.c  perceptron.c
